# example-micronaut-bazel

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
patches/: BUILD  grpc-java.patch
src/main/kotlin/example/: App.kt  Client.kt  HelloServiceJava.java
src/main/proto/: hello.proto
tools/build_rules/: prelude_bazel
